# aerpaw-datasets

./: .gitignore  .gitmodules  README.md  config stub.env  generate_kml.sh  learning_report.md  learning_report_old.md  pyproject.toml  report.md  requirements.txt  run.sh
checkpoints/: elm_best.pt  inception_best.pt
dataset22/: process.py
presentation/: beamerthemeVT.sty  final_exam_presentation.tex  gemini_output.md  notes.txt  references.bib  story.md
presentations/: README.md  beamerthemeVT.sty  graph_slide.tex  table_slide.tex
presentations/details/: build_presentation.py  correlation_slides.tex  details.tex  presentation_main.tex  summary_slides.tex
presentations/graphs/: average_mutual_slide.tex  build_presentation.py  fast_fading_correlation_slides.tex  presentation_main.tex  spatial_correlation_slides.tex
presentations/investigation/: investigation.tex
scripts/: analyze_features_22.sh  generate_graphs.sh  generate_graphs_18.sh  generate_graphs_22.sh  generate_graphs_24.sh  generate_kml.sh  generate_kml_22.sh  graph_temporal.sh  init.sh  output_graphs.sh
src/aerpaw_processing/: clean.py  details.py  feature_analysis.py  process.py  tower_locations.py  utils.py
src/aerpaw_processing/analysis/: analysis_main.py  analysis_utils.py
src/aerpaw_processing/analysis/output/: analysis.csv
src/aerpaw_processing/archive/: clean.py  details.py  feature_analysis.py  process.py
src/aerpaw_processing/dataloader/: dataloader.py  dataloader_test.py
src/aerpaw_processing/dataset12/: example.py
src/aerpaw_processing/dataset22/: process.py
src/aerpaw_processing/graph/: graph_main.py  graph_utils.py  test.py
src/aerpaw_processing/paper/: dataloader.py  dataloader_test.py  elm_model.py  fig_4.py  fspl_model.py  inception_dataloader.py  inception_model.py  inception_run.py  learning_experiment.py  preprocess_paper.py  preprocess_report.py  preprocess_steps.py  preprocess_utils.py  showcase_experiment.py  uav_dataloader.py
src/aerpaw_processing/paper/report/: report.md
src/aerpaw_processing/paper/report_mad/: report.md
src/aerpaw_processing/preprocessing/: __init__.py  analyze.py  main.py  preprocess_main.py  preprocess_utils.py  step_tracker.py  utils.py
src/aerpaw_processing/preprocessing/analyze_output/: analysis.csv
src/aerpaw_processing/resources/: config.py  config.yaml  generate_config_class.sh  step_tracker.py  temp.txt  temp.yaml
src/aerpaw_processing/resources/config/: config_class.py  config_file.yaml  config_init.py  generate_config_class.sh
src/extra/: stats.py
