[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerpaw_processing"
version = "0.0.1"
authors = [
  { name="Ryan Frost", email="rfrost096@gmail.com" },
]
description = "AERPAW processing scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "plotly",
    "python-dotenv",
    "pyarrow",
    "numpy",
    "matplotlib",
    "scipy",
    "simplekml",
    "pyproj",
    "toml",
    "yellowbrick",
    "scikit-learn",
    "pyyaml",
    "datamodel-code-generator",
    "pyproj",
    "torch"
]

[project.scripts]
generate-kml = "aerpaw_processing.KMLPostProcessing.generate_kpi_kml:main"
graph-mutual = "aerpaw_processing.graph.graph_main:graph_mutual"
graph-avg-mutual = "aerpaw_processing.graph.graph_main:graph_avg_mutual"
graph-label = "aerpaw_processing.graph.graph_main:graph_label"
graph-label-temporal = "aerpaw_processing.graph.graph_main:graph_label_temporal"
graph_spatial_rsrp_correlation = "aerpaw_processing.graph.graph_main:graph_spatial_rsrp_correlation"
graph_fast_fading_correlation = "aerpaw_processing.graph.graph_main:graph_fast_fading_correlation"